--- a/GitApi/GitApi.Web/Views/Repositorios/Index.cshtml
+++ b/GitApi/GitApi.Web/Views/Repositorios/Index.cshtml
@@ -8,3 +8,7 @@
 
 <button type="button" id="btnLstRepo" class="form-control">Listar meus repositórios</button> 
 
+@section scripts{
+    @Scripts.Render("~/bundles/framework"
+    , "~/bundles/repositoriosIndex")
+}
