--- a/GitApi/GitApi.Web/Views/Repositorios/Index.cshtml
+++ b/GitApi/GitApi.Web/Views/Repositorios/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using GitApi.Web.ViewModels.Repositorios;
+@model IndexViewModel
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,9 +8,29 @@
 
 <h2>Painel de Repositórios</h2>
 
-<button type="button" id="btnLstRepo" class="form-control">Listar meus repositórios</button> 
+@using (Html.BeginForm())
+{
+    <div class="form-group">
+        @Html.TextBoxFor(model => model.NomeRepositorio, new { @class = "form-control" })
+        @Html.ValidationMessageFor(model => model.NomeRepositorio)
+    </div>
+    
+    <div class="form-group">
+        <button type="button" id="btnBuscarNome" class="form-control">Buscar repositórios por nome</button><br /><br />
+        <button type="button" id="btnLstRepo" class="form-control">Listar meus repositórios</button>
+    </div>
+    
+}
+
+
+
+
+<div id="resultado">
+
+</div>
 
 @section scripts{
-    @Scripts.Render("~/bundles/framework"
+    @Scripts.Render("~/bundles/jqueryval",
+    "~/bundles/framework"
     , "~/bundles/repositoriosIndex")
 }
