correção na exibição dos detalhes

--- a/GitApi/GitApi.Web/Views/Repositorios/_Detalhes.cshtml
+++ b/GitApi/GitApi.Web/Views/Repositorios/_Detalhes.cshtml
@@ -8,27 +8,27 @@
 {
     <div class="form-group">
         <label>Id repositório</label>
-        <label>@Model.Id</label>
+        <label>@Model.Repositorios.Id</label>
     </div>
     <div class="form-group">
         <label>Nome do repositório</label>
-        <label>@Model.Name</label>
+        <label>@Model.Repositorios.Name</label>
     </div>
     <div class="form-group">
         <label>Descrição do repositório</label>
-        <label>@Model.Description</label>
+        <label>@Model.Repositorios.Description</label>
     </div>
     <div class="form-group">
         <label>Linguage, do repositório</label>
-        <label>@Model.Language</label>
+        <label>@Model.Repositorios.Language</label>
     </div>
     <div class="form-group">
         <label>Data atualização do repositório</label>
-        <label>@Model.UpdateDate</label>
+        <label>@Model.Repositorios.UpdateDate</label>
     </div>
     <div class="form-group">
         <label>Dono do repositório</label>
-        <label>@Model.Owner.Login</label>
+        <label>@Model.Repositorios.Owner.Login</label>
     </div>
 
     
