implementação do repositório como favoritos.

--- a/GitApi/GitApi.Web/Views/Repositorios/_Detalhes.cshtml
+++ b/GitApi/GitApi.Web/Views/Repositorios/_Detalhes.cshtml
@@ -40,4 +40,9 @@
         </ul>
     }
     
+    <div class="form-group">
+        <button type="button" id="btn-favorito" data-id-repo="@Model.Repositorios.Id" data-nome-repo="@Model.Repositorios.Name">
+            Marcar como favorito
+        </button>
+    </div>
 }
