listagem de favoritos

--- a/GitApi/GitApi.Web/Views/Shared/_Layout.cshtml
+++ b/GitApi/GitApi.Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Repositorios", "Index", "Repositorios")</li>                    
+                    <li>@Html.ActionLink("Repositorios", "Index", "Repositorios")</li>
+                    <li>@Html.ActionLink("Favoritos", "Index", "Favoritos")</li>
                 </ul>
             </div>
         </div>
