--- a/GitApi/GitApi.Web/Views/Repositorios/_ListagemRepositoriosNome.cshtml
+++ b/GitApi/GitApi.Web/Views/Repositorios/_ListagemRepositoriosNome.cshtml
@@ -1,12 +1,13 @@
 ﻿@using GitApi.Web.GitRepositorios.Response;
 
-@model IList<RepositoriosResponse>
+@model BuscaPorNomeResponse
 
 <script type="text/javascript">
     $(function () {
         registrarEventosListagem();
     });
 </script>
+
 
 <table class="table table-bordered">
     <thead>
@@ -17,18 +18,22 @@
             <th>Linguagem</th>
             <th colspan="2">Data atualização</th>
         </tr>
-    </thead>            
+    </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
+        @foreach (var item in Model.Items)
+        {            
             <tr>
                 <td>@item.Id</td>
                 <td>@item.Name</td>
                 <td>@item.Description</td>
                 <td>@item.Language</td>
                 <td>@item.UpdateDate.ToString("dd/MM/yyyy HH:mm:ss")</td>
-                <td><a id="detalhes-repositorio" href="Javascript:;" data-repositorio="@item.Name" data-login="@item.Owner.Login" data-name="@item.Name">detalhes</a></td>
-            </tr>
+                <td>
+                    <a id="detalhes-repositorio" href="Javascript:;" data-login="@item.Owner.Login" data-name="@item.Name">
+                    detalhes
+                    </a>
+                </td>
+            </tr>                
         }
     </tbody>
 </table>
