--- a/GitApi/GitApi.Web/Views/Repositorios/_ListagemRepositorios.cshtml
+++ b/GitApi/GitApi.Web/Views/Repositorios/_ListagemRepositorios.cshtml
@@ -27,7 +27,7 @@
                 <td>@item.Description</td>
                 <td>@item.Language</td>
                 <td>@item.UpdateDate.ToString("dd/MM/yyyy HH:mm:ss")</td>
-                <td><a id="detalhes-repositorio" href="Javascript:;" data-repositorio="@item.Name" data-login="@item.Owner.Login" data-name="@item.Name">detalhes</a></td>
+                <td><a class="detalhes-repositorio" href="Javascript:;" data-repositorio="@item.Name" data-login="@item.Owner.Login" data-name="@item.Name">detalhes</a></td>
             </tr>
         }
     </tbody>
